<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="40sp">

    <Button
        android:id="@+id/navegarBtt"
        android:layout_marginTop="140sp"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:text="@string/navegar"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <Button
        android:id="@+id/llamarBtt"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:text="@string/llamar"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/navegarBtt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <Button
        android:id="@+id/enviarSmsBtt"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:text="@string/enviar_sms"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/llamarBtt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.13"/>

</androidx.constraintlayout.widget.ConstraintLayout>